# projectart

./: .gitignore  CLAUDE.md  PRD.md  README.md  pyproject.toml  vercel.json
docs/: linear-agent-orientation.md
docs/superpowers/plans/: 2026-06-05-reactive-objects.md  2026-06-06-floor-stage-whack-a-mole.md
docs/superpowers/specs/: 2026-06-05-floor-stage-whack-a-mole-design.md  2026-06-05-reactive-objects-design.md
renderer/: floor.html  floor.js  index.html  reactive.html  reactive.js  scene.js  sketch.js  ws_client.js
research-notes/: deep-research-report.md  gemini-instructions.md  gemini-research-report.md
src/projectart/: __main__.py  app.py
tests/: test_aruco.py  test_audio_devices.py  test_calibration_persist.py  test_cat_audio.py  test_faces.py  test_filter_one_euro.py  test_floor_game.py  test_freeze_sequence.py  test_freeze_tag.py  test_gloves_calib.py  test_mapping.py  test_physics.py  test_protocol.py  test_reactive_behaviors.py  test_reactive_config.py  test_reactive_objects.py  test_reactive_rules.py  test_reactive_source.py  test_reactive_world.py  test_scene.py  test_scene_triggers.py  test_stage.py  test_state_machine.py  test_stereo.py  test_tracking.py  test_tracking_hysteresis.py  test_tracking_velocity.py  test_triggers.py  test_wall_plane.py  test_whack_a_mole.py  test_yolo_dots.py
tests/support/: __init__.py  game_driver.py
tools/: enroll_faces.py  gen_cat_audio.py  gen_freeze_audio.py  gen_person_audio.py  lan_relay.py
training/: README.md
training/scripts/: train_cats_people_subset.sh  verify_yolov8.py
(+43 files in other folders)
