[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "projectart"
version = "0.1.0"
description = "Interactive wall drawing system. Two cameras + dot gloves + custom YOLO + projector."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "ProjectArt" }]
dependencies = [
    "numpy>=1.26,<2.0",
    "opencv-contrib-python>=4.10,<5.0",
    "websockets>=12.0,<13",
    "pydantic>=2.7,<3",
    "imageio>=2.34,<3",
]

[project.optional-dependencies]
yolo = ["ultralytics>=8.3"]
mouse = ["pynput>=1.7"]
androidtv = ["adb-shell>=0.4.4"]
dev = ["pytest>=8.2", "ruff>=0.4", "rich"]

[project.scripts]
projectart = "projectart.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
